Ensure long workflow names get wrapped instead of overlapping with the date.

--- a/yabi/yabife/trunk/yabife/static/css/yabi.css
+++ b/yabi/yabife/trunk/yabife/static/css/yabi.css
@@ -995,7 +995,6 @@ input {
     border-bottom:1px solid #ddd;
     padding:4px;
     padding-left: 12px;
-    padding-right: 10px;
     position:relative;
     background: #eee url(../images/job_bg.png);
     filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#ffffff', EndColorStr='#f6f6f6');
@@ -1081,9 +1080,10 @@ input {
 }
 
 .workflowDate {
-    position:absolute;
-    right:36px;
-    top:6px;
+    float: right;
+    max-width: 25%;
+    padding: 2px 30px 0 0;
+    text-align: right;
     color:#8ba9dc;
     font-size:90%;
     font-weight:normal;
